@@ -1,3 +1,4 @@
+Micro tab: Move all particles toward the drain with a random walk, with nearer particles moving faster
 Micro tab: Incremental progress toward draining according to formula ratios
 Micro tab: During crystal growth, ensure crystals grow by complete formula units instead of by particle
 Micro tab: Improvements for initial crystal creation, with emphasis on making sure it matches the formula ratio
